--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
+    "apexcharts": "^3.37.2",
     "axios": "^1.3.4",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-i18next": "^12.2.0",
